Issue #10078. New methods to modify edges and restrict properties usage were added.Lightweight edges were prohibited. Bug in tracking of index changes in case of RID identity chage was fixed. Several Optionals were removed form SQL engine. Additional links to ensure edge invariants and speed up vertex traversal were added.